[gd_scene load_steps=49 format=3 uid="uid://drl0elvrqhdoa"]

[ext_resource type="Script" path="res://Main/Data/NPCService/Npc.gd" id="1_5bhep"]
[ext_resource type="Script" path="res://StateMachine/StateMachine.gd" id="3_5ettv"]
[ext_resource type="Script" path="res://Main/Data/NPCService/NpcIdle.gd" id="3_s46ix"]
[ext_resource type="Script" path="res://Main/Data/NPCService/NpcWalking.gd" id="4_057mh"]
[ext_resource type="Script" path="res://Main/Data/NPCService/NpcSearching.gd" id="5_3bmm0"]
[ext_resource type="Script" path="res://Main/Data/NPCService/NpcBuying.gd" id="6_ut8hy"]
[ext_resource type="PackedScene" uid="uid://dlfjevtir6k4b" path="res://Component/animation_component.tscn" id="7_83h4x"]
[ext_resource type="Script" path="res://Main/Data/NPCService/NpcLeaving.gd" id="7_hyeyy"]
[ext_resource type="Texture2D" uid="uid://dwrt2o76g30yv" path="res://Asset/Player/body_walk_front.png" id="8_41bmt"]
[ext_resource type="Texture2D" uid="uid://mq6dwpbl0re2" path="res://Asset/Player/body_walk_back.png" id="9_vxxgr"]
[ext_resource type="Texture2D" uid="uid://t6r1syq2kits" path="res://Asset/Player/body_walk_right.png" id="10_kopbc"]
[ext_resource type="Texture2D" uid="uid://cn0m705m0n0j8" path="res://Asset/Player/cloth_walk_front.png" id="11_3cafy"]
[ext_resource type="Texture2D" uid="uid://bk0hcwaukf0vi" path="res://Asset/Player/cloth_walk_back.png" id="12_ks7vq"]
[ext_resource type="Texture2D" uid="uid://byvgq0h8vifn" path="res://Asset/Player/cloth_walk_right.png" id="13_nbraf"]
[ext_resource type="Script" path="res://Main/Data/NPCService/view_component.gd" id="14_6ywpm"]
[ext_resource type="Texture2D" uid="uid://dx3dgt6ub6k0t" path="res://Asset/32x32white.png" id="14_hb4lp"]
[ext_resource type="PackedScene" uid="uid://dp1xpv3nykfmd" path="res://Component/interactable_object_component.tscn" id="14_pa3x6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y64r6"]
atlas = ExtResource("8_41bmt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyjbh"]
atlas = ExtResource("8_41bmt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc2ab"]
atlas = ExtResource("8_41bmt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmid0"]
atlas = ExtResource("8_41bmt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5crfe"]
atlas = ExtResource("8_41bmt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_03umj"]
atlas = ExtResource("9_vxxgr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_106id"]
atlas = ExtResource("9_vxxgr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rua8"]
atlas = ExtResource("9_vxxgr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xes3c"]
atlas = ExtResource("9_vxxgr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7byx"]
atlas = ExtResource("10_kopbc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_olcds"]
atlas = ExtResource("10_kopbc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qtqq"]
atlas = ExtResource("10_kopbc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv8nv"]
atlas = ExtResource("10_kopbc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ghpsg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y64r6")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyjbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc2ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmid0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5crfe")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03umj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_106id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rua8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xes3c")
}],
"loop": true,
"name": &"walking_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7byx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olcds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qtqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv8nv")
}],
"loop": true,
"name": &"walking_horizontal",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nktdc"]
atlas = ExtResource("11_3cafy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_552u0"]
atlas = ExtResource("11_3cafy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikt58"]
atlas = ExtResource("11_3cafy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwx5p"]
atlas = ExtResource("11_3cafy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4028u"]
atlas = ExtResource("11_3cafy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81lx2"]
atlas = ExtResource("12_ks7vq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl10a"]
atlas = ExtResource("12_ks7vq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7k0k"]
atlas = ExtResource("12_ks7vq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ora4c"]
atlas = ExtResource("12_ks7vq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mt58"]
atlas = ExtResource("13_nbraf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnuis"]
atlas = ExtResource("13_nbraf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqw32"]
atlas = ExtResource("13_nbraf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq4wx"]
atlas = ExtResource("13_nbraf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8sn3k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nktdc")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_552u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikt58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwx5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4028u")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81lx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl10a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7k0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ora4c")
}],
"loop": true,
"name": &"walking_back",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mt58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnuis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqw32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq4wx")
}],
"loop": true,
"name": &"walking_horizontal",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kahc5"]
radius = 3.0
height = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8757"]
size = Vector2(17, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfacd"]
size = Vector2(40, 2)

[node name="NPC" type="CharacterBody2D" node_paths=PackedStringArray("animation_component", "state_machine")]
collision_layer = 8
collision_mask = 96
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 1.0
script = ExtResource("1_5bhep")
animation_component = NodePath("AnimationComponent")
state_machine = NodePath("StateMachine")

[node name="ShoppingTimer" type="Timer" parent="."]

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_5ettv")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("3_s46ix")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="Walking" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("4_057mh")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="Searching" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("5_3bmm0")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="ThinkTimer" type="Timer" parent="StateMachine/Searching"]
one_shot = true

[node name="InteractTimer" type="Timer" parent="StateMachine/Searching"]
one_shot = true

[node name="Buying" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("6_ut8hy")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="WaitTimer" type="Timer" parent="StateMachine/Buying"]
one_shot = true

[node name="Leaving" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("customer", "navigation_agent")]
script = ExtResource("7_hyeyy")
customer = NodePath("../..")
navigation_agent = NodePath("../NavigationAgent")

[node name="MakePathTimer" type="Timer" parent="StateMachine"]

[node name="NavigationAgent" type="NavigationAgent2D" parent="StateMachine"]
path_desired_distance = 8.0
target_desired_distance = 16.0
navigation_layers = 9
avoidance_enabled = true
max_neighbors = 5
debug_enabled = true

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("cloth_animation", "animation_player_list") instance=ExtResource("7_83h4x")]
cloth_animation = NodePath("ClothAnimation")
animation_player_list = [NodePath("BodyAnimation"), NodePath("ClothAnimation")]
is_default_color = true

[node name="BodyAnimation" type="AnimatedSprite2D" parent="AnimationComponent"]
sprite_frames = SubResource("SpriteFrames_ghpsg")
animation = &"walking"
offset = Vector2(0, -15)
flip_h = true

[node name="ClothAnimation" type="AnimatedSprite2D" parent="AnimationComponent"]
sprite_frames = SubResource("SpriteFrames_8sn3k")
animation = &"walking"
offset = Vector2(0, -15)
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kahc5")

[node name="InteractableObjectComponent" parent="." node_paths=PackedStringArray("main_object") instance=ExtResource("14_pa3x6")]
collision_layer = 8
collision_mask = 0
main_object = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableObjectComponent"]
position = Vector2(-0.5, -13.5)
shape = SubResource("RectangleShape2D_a8757")
debug_color = Color(0.411765, 1, 0.254902, 0.419608)

[node name="ViewComponent" type="Node2D" parent="." node_paths=PackedStringArray("customer", "view_area_parent")]
visible = false
script = ExtResource("14_6ywpm")
customer = NodePath("..")
view_area_parent = NodePath("ViewPoint")

[node name="ViewPoint" type="Node2D" parent="ViewComponent"]
position = Vector2(0, -19)

[node name="left" type="Area2D" parent="ViewComponent/ViewPoint"]
rotation = -0.436332
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="Sprite2D" type="Sprite2D" parent="ViewComponent/ViewPoint/left"]
modulate = Color(1, 1, 1, 0.439216)
position = Vector2(20, 0)
scale = Vector2(1.25, 0.0625)
texture = ExtResource("14_hb4lp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewComponent/ViewPoint/left"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_sfacd")

[node name="middle" type="Area2D" parent="ViewComponent/ViewPoint"]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewComponent/ViewPoint/middle"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_sfacd")

[node name="Sprite2D" type="Sprite2D" parent="ViewComponent/ViewPoint/middle"]
modulate = Color(1, 1, 1, 0.439216)
position = Vector2(20, 0)
scale = Vector2(1.25, 0.0625)
texture = ExtResource("14_hb4lp")

[node name="right" type="Area2D" parent="ViewComponent/ViewPoint"]
rotation = 0.436332
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewComponent/ViewPoint/right"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_sfacd")

[node name="Sprite2D" type="Sprite2D" parent="ViewComponent/ViewPoint/right"]
modulate = Color(1, 1, 1, 0.439216)
position = Vector2(20, 0)
scale = Vector2(1.25, 0.0625)
texture = ExtResource("14_hb4lp")

[node name="Line2D" type="Line2D" parent="."]
default_color = Color(0.2, 1, 0, 1)

[connection signal="timeout" from="StateMachine/Searching/ThinkTimer" to="StateMachine/Searching" method="_on_wait_timer_timeout"]
[connection signal="timeout" from="StateMachine/Searching/InteractTimer" to="StateMachine/Searching" method="_on_interaction_timer_timeout"]
[connection signal="timeout" from="StateMachine/Buying/WaitTimer" to="StateMachine/Buying" method="_on_wait_timer_timeout"]
